fixed on small devices

--- a/src/components/styles/NavBar.css
+++ b/src/components/styles/NavBar.css
@@ -8,15 +8,14 @@
 
 .nav-link {
   color: black !important;
-  font-family: 'Cabin', sans-serif;
-  font-weight: bold;
+  font-weight: 600;
 
   /*padding-top:0 !important;
   padding-bottom: 0 !important;*/
 }
 
 .navbar-brand {
-  font-weight: bold;
+  font-weight: 600;
   color: black !important;
 }
 
@@ -38,7 +37,7 @@
   text-align: right;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 420px) {
   .navbar-brand > img {
     height: 25px;
     width: 25px;
@@ -48,12 +47,22 @@
   }
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (max-width: 375px) {
   .navbar-brand > img {
-    height: 25px;
-    width: 25px;
+    height: 20px;
+    width: 20px;
   }
   .navbar-brand {
     font-size: 14px;
+  }
+}
+
+@media only screen and (max-width: 325px) {
+  .navbar-brand > img {
+    height: 20px;
+    width: 20px;
+  }
+  .navbar-brand {
+    font-size: 13px;
   }
 }
